--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,9 +2,9 @@
    "type": "postgres",
    "host": "localhost",
    "port": 5432,
-   "username": "test",
-   "password": "test",
-   "database": "test",
+   "username": "postgres",
+   "password": "postgres",
+   "database": "recuperacao_email",
    "synchronize": true,
    "logging": false,
    "entities": [
